--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Etch-a-Sketch</h1>
 
     <div id="buttonContainer">
-    <button id="reset">Reset</button>
+    <button id="resetButton">Reset</button>
     <button id="setNumber">Set number</button>
     </div>
 
