--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-
+    <div class="container">
     <h1>Etch-a-Sketch</h1>
 
     <div id="buttonContainer">
@@ -17,6 +17,7 @@
     </div>
 
     <div class="divContainer"></div>
+    </div>
     
 </body>
 </html>
